--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
 				</div>
 				<!-- Derecho -->
 				<div class="body-right">
-					<input type="text" 1 />
-					<input type="text" 2 />
-					<input type="text" 3 />
+					<input type="text" id="i1" name="nombre" required minlength="4" maxlength="8" size="10" placeholder="Algún nombre" />
+					<input type="text" id="i2" name="email1" required minlength="4" maxlength="8" size="10" placeholder="Algún Email" />
+					<input type="text" id="i3" name="comentario" required minlength="4" maxlength="8" size="10" placeholder="Algún comentario" />
 				</div>
 			</div>
 
